--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,7 +8,7 @@ subject: My Email Templates
 <container>
 
   <spacer size="24"></spacer>
-  
+
   <row>
     <columns small="12">
 
@@ -30,6 +30,7 @@ subject: My Email Templates
         <item href="{{root}}sidebar.html" target="_blank">Sidebar Template</item>
         <item href="{{root}}sidebar-hero.html" target="_blank">Sidebar Hero Template</item>
         <item href="{{root}}welcome.html" target="_blank">Welcome Template</item>
+        <item href="{{root}}starter_template.html" target="_blank">Starter Template</item>
       </menu>
     </center>
 
@@ -52,4 +53,3 @@ subject: My Email Templates
 </center>
 
 <spacer size="16"></spacer>
-
