set width of image to 100%; add background color and color style in container

--- a/src/pages/starter_template.html
+++ b/src/pages/starter_template.html
@@ -4,10 +4,10 @@ subject: Starter Email Template
 
 <spacer size="16"></spacer>
 
-<container>
+<container style="background-color: white; color: #0a0a0a">
   <wrapper class="header" bgcolor="#1B697D">
     <center>
-      <img src="https://kudostatic.s3.amazonaws.com/staging/mail_images/illustrations/large-event.png" width="290"
+      <img src="https://kudostatic.s3.amazonaws.com/staging/mail_images/illustrations/large-event.png" style="width: 100%" width="290"
         height="" alt="Event image">
     </center>
   </wrapper>
